[tool.poetry]
name = "agenci-ai-faq"
version = "0.1.0"
description = ""
authors = ["IMPRV.ai Dev Team <dev@imprv.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
